# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "batch_feature_service_proto",
    srcs = ["batch_feature_service.proto"],
    deps = [
        ":common_proto",
        "//secretflow_serving/protos:feature_proto",
    ],
)

cc_proto_library(
    name = "batch_feature_service_cc_proto",
    deps = [":batch_feature_service_proto"],
)

proto_library(
    name = "common_proto",
    srcs = ["common.proto"],
)

cc_proto_library(
    name = "common_cc_proto",
    deps = [":common_proto"],
)

proto_library(
    name = "error_code_proto",
    srcs = ["error_code.proto"],
)

cc_proto_library(
    name = "error_code_cc_proto",
    deps = [":error_code_proto"],
)
