# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:serving.bzl", "serving_cc_library", "serving_cc_test")

package(default_visibility = ["//visibility:public"])

serving_cc_library(
    name = "sql_processor",
    srcs = ["sql_processor.cc"],
    hdrs = ["sql_processor.h"],
    deps = [
        "//secretflow_serving/core:exception",
        "//secretflow_serving/util:arrow_helper",
        "@boost//:lexical_cast",
        "@org_apache_arrow//:arrow",
        "@org_sqlite//:sqlite3",
        "@yacl//yacl/utils:scope_guard",
    ],
)
