# Copyright 2025 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//secretflow_serving_lib:__subpackages__"])

py_library(
    name = "config_py",
    srcs = [
        "cluster_config_pb2.py",
        "feature_config_pb2.py",
        "logging_config_pb2.py",
        "model_config_pb2.py",
        "retry_policy_config_pb2.py",
        "server_config_pb2.py",
        "serving_config_pb2.py",
        "tls_config_pb2.py",
        "trace_config_pb2.py",
    ],
)
