# Copyright 2024 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:serving.bzl", "serving_cc_library", "serving_cc_test")

package(default_visibility = ["//visibility:public"])

serving_cc_library(
    name = "phe_2p_tree_select",
    srcs = ["phe_2p_tree_select.cc"],
    hdrs = ["phe_2p_tree_select.h"],
    deps = [
        "//secretflow_serving/ops:op_factory",
        "//secretflow_serving/ops:op_kernel_factory",
        "//secretflow_serving/ops:tree_utils",
        "//secretflow_serving/util:utils",
    ],
    alwayslink = True,
)

serving_cc_test(
    name = "phe_2p_tree_select_test",
    srcs = ["phe_2p_tree_select_test.cc"],
    deps = [
        ":phe_2p_tree_select",
        "//secretflow_serving/ops/he:test_utils",
        "@yacl//yacl/utils:elapsed_timer",
    ],
)

serving_cc_library(
    name = "phe_2p_tree_merge",
    srcs = ["phe_2p_tree_merge.cc"],
    hdrs = ["phe_2p_tree_merge.h"],
    deps = [
        "//secretflow_serving/ops:node_def_util",
        "//secretflow_serving/ops:op_factory",
        "//secretflow_serving/ops:op_kernel_factory",
        "//secretflow_serving/ops:tree_utils",
        "//secretflow_serving/util:utils",
    ],
    alwayslink = True,
)

serving_cc_test(
    name = "phe_2p_tree_merge_test",
    srcs = ["phe_2p_tree_merge_test.cc"],
    deps = [
        ":phe_2p_tree_merge",
        "//secretflow_serving/ops/he:test_utils",
        "@yacl//yacl/utils:elapsed_timer",
    ],
)

serving_cc_library(
    name = "phe_2p_tree_ensemble_merge",
    srcs = ["phe_2p_tree_ensemble_merge.cc"],
    hdrs = ["phe_2p_tree_ensemble_merge.h"],
    deps = [
        "//secretflow_serving/ops:node_def_util",
        "//secretflow_serving/ops:op_factory",
        "//secretflow_serving/ops:op_kernel_factory",
        "//secretflow_serving/util:utils",
    ],
    alwayslink = True,
)

serving_cc_test(
    name = "phe_2p_tree_ensemble_merge_test",
    srcs = ["phe_2p_tree_ensemble_merge_test.cc"],
    deps = [
        ":phe_2p_tree_ensemble_merge",
        "//secretflow_serving/ops/he:test_utils",
    ],
)

serving_cc_library(
    name = "phe_2p_tree_ensemble_predict",
    srcs = ["phe_2p_tree_ensemble_predict.cc"],
    hdrs = ["phe_2p_tree_ensemble_predict.h"],
    deps = [
        "//secretflow_serving/core:link_func",
        "//secretflow_serving/ops:node_def_util",
        "//secretflow_serving/ops:op_factory",
        "//secretflow_serving/ops:op_kernel_factory",
        "//secretflow_serving/util:utils",
    ],
    alwayslink = True,
)

serving_cc_test(
    name = "phe_2p_tree_ensemble_predict_test",
    srcs = ["phe_2p_tree_ensemble_predict_test.cc"],
    deps = [
        ":phe_2p_tree_ensemble_predict",
        "@yacl//yacl/utils:elapsed_timer",
    ],
)
